nix/services/rke2/manifests/cilium-l7-visibility.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
    name: "l7-visibility"
spec:
    endpointSelector:
        matchLabels:
            "k8s:io.kubernetes.pod.namespace": default
    egress:
        - toPorts:
              - ports:
                    - port: "53"
                      protocol: ANY
                rules:
                    dns:
                        - matchPattern: "*"
        - toEntities:
              - world
          toPorts:
              - ports:
                    - port: "80"
                      protocol: TCP
                    - port: "8080"
                      protocol: TCP
                rules:
                    http: [{}]
        - toEntities:
              - world
